[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-review"
version = "0.1.0"
description = "AI-powered PR review CLI using OpenAI"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
pr-review = "reviewer:main"

[tool.hatch.build.targets.wheel]
include = ["reviewer.py"]