[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-ai-pr-review"
version = "0.1.3"
description = "AI-powered PR review CLI using OpenAI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Siddharth Chakraborty", email = "siddharth.chakraborty06@gmail.com" }
]
keywords = ["cli", "code-review", "openai", "git", "developer-tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
git-ai-pr-review = "reviewer:main"

[tool.hatch.build.targets.wheel]
include = ["reviewer.py"]
